@@ -1078,13 +1078,13 @@ boolean G_CheckSpot(int playernum, mapthing_t *mthing)
       if (queuesize < bodyquesize)
 	{
 	  bodyque = realloc(bodyque, bodyquesize*sizeof*bodyque);
-	  memset(bodyque+queuesize, 0, 
+	  memset(bodyque+queuesize, 0,
 		 (bodyquesize-queuesize)*sizeof*bodyque);
 	  queuesize = bodyquesize;
 	}
-      if (bodyqueslot >= bodyquesize) 
-	P_RemoveMobj(bodyque[bodyqueslot % bodyquesize]); 
-      bodyque[bodyqueslot++ % bodyquesize] = players[playernum].mo; 
+      if (bodyqueslot >= bodyquesize)
+	P_RemoveMobj(bodyque[bodyqueslot % bodyquesize]);
+      bodyque[bodyqueslot++ % bodyquesize] = players[playernum].mo;
     }
   else
     if (!bodyquesize)
@@ -1092,7 +1092,7 @@ boolean G_CheckSpot(int playernum, mapthing_t *mthing)
 
   // spawn a teleport fog
   ss = R_PointInSubsector (x,y);
-  an = ( ANG45 * (mthing->angle/45) ) >> ANGLETOFINESHIFT;
+  an = ( ANG45 * ((unsigned)mthing->angle/45) ) >> ANGLETOFINESHIFT;
 
   mo = P_SpawnMobj(x+20*finecosine[an], y+20*finesine[an],
                    ss->sector->floorheight, MT_TFOG);
